refactor: remove acl, remove minio logs archive, remove app keys, standard logs
